# analysis_lab3

./: .gitignore  data.ods  pyproject.toml  requirements.txt
analysis_lab3/: cropped_data.csv  data.csv  lab3.py  own_lab3.py
