[tool.poetry]
name = "analysis_lab3"
version = "0.0.1"
description = ""
authors = ["krasnovmv <famaup@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.1"
matplotlib = "^3.1"
sklearn = "^0.0.0"
plotly = "^4.1"

[tool.poetry.dev-dependencies]
black = "^19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
