[tool.poetry]
name = "analysis_lab3"
version = "0.0.1"
description = ""
authors = ["krasnovmv <famaup@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^0.25.3"
sklearn = "^0.0.0"
matplotlib = "^3.1.2"
plotly = "^4.3.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
